# py-mat

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PROCESS.md  TEMPERATURE_UNITS_IMPLEMENTATION.md  justfile.project  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: material-correction.yml  material-request.yml
.github/actions/setup-env/: action.yml
.github/workflows/: catalog-previews.yml  catalog.yml  ci.yml  enrich-vis.yml  release-please.yml  release-rs-materials.yml  release.yml  sync-issues.yml  sync-main-to-dev.yml  visual-regression.yml
docs/: README_TEMPLATE.md
docs/catalog/: README.md
docs/catalog/ceramics/: README.md  alumina-al995.md  alumina-al999.md  alumina.md  beryllia.md  glass-BK7.md  glass-borosilicate.md  glass-fused_silica.md  glass.md  macor.md  shapal.md  sic.md  yttria.md  zirconia.md
docs/catalog/electronics/: README.md  copper_pcb-gold_plated.md  copper_pcb-oz1.md  copper_pcb-oz2.md  copper_pcb.md  fr4.md  kapton.md  rogers-r4350b.md  rogers.md  solder-SAC305.md  solder-Sn63Pb37.md  solder.md
docs/catalog/gases/: README.md  air.md  argon.md  co2-dry_ice.md  co2.md  helium-liquid.md  helium.md  hydrogen.md  methane.md  neon.md  nitrogen-liquid.md  nitrogen.md  oxygen.md  vacuum.md  xenon.md
docs/catalog/liquids/: README.md  glycerol.md  heavy_water.md  mineral_oil.md  silicone_oil.md  water-ice.md  water.md
docs/catalog/metals/: README.md  aluminum-a2024.md  aluminum-a6061.md  aluminum-a6063.md  aluminum-a7075.md  aluminum.md  brass.md  copper-OFHC.md  copper.md  lead.md  stainless-s17_4PH.md  stainless-s303.md  stainless-s304.md  stainless-s316L.md  stainless.md  titanium-grade5.md  titanium.md  tungsten-W90.md  tungsten-pure.md  tungsten.md
docs/catalog/plastics/: README.md  abs.md  delrin.md  esr.md  nylon.md  pc.md  pctfe.md  pe-hdpe.md  pe-ldpe.md  pe-uhmwpe.md  pe.md  peek-CF30.md  peek-GF30.md  peek-unfilled.md  peek-victrex.md  peek.md  petg.md  pla.md  pmma.md  ptfe-reflector.md  ptfe.md  torlon.md  tpu.md  ultem.md  vespel.md
docs/catalog/scintillators/: README.md  bgo.md  csi-Na.md  csi-Tl.md  csi.md  labr3.md  lyso-Ce.md  lyso.md  nai-Tl.md  nai.md  plastic_scint-BC400.md  plastic_scint-EJ200.md  plastic_scint.md  pwo.md
docs/decisions/: 0001-derived-chemistry-properties-live-on-material.md  0002-pbr-via-threejs-materials-optional-extra.md  0002-vis-owns-identity-client-exposed.md  README.md
docs/issues/: issue-1.md  issue-10.md  issue-100.md  issue-103.md  issue-104.md  issue-105.md  issue-106.md  issue-109.md  issue-11.md  issue-179.md  issue-187.md  issue-218.md  issue-220.md  issue-221.md  issue-222.md  issue-227.md  issue-27.md  issue-3.md  issue-31.md  issue-4.md  issue-5.md  issue-78.md  issue-84.md  issue-85.md  issue-88.md  issue-89.md  issue-9.md  issue-90.md  issue-97.md  issue-98.md  issue-99.md
docs/migration/: v2-to-v3.md
docs/pull-requests/: pr-12.md  pr-13.md  pr-14.md  pr-15.md  pr-16.md  pr-17.md  pr-18.md  pr-19.md  pr-2.md  pr-20.md  pr-21.md  pr-215.md  pr-216.md  pr-217.md  pr-219.md  pr-22.md  pr-223.md  pr-224.md  pr-225.md  pr-226.md  pr-228.md  pr-23.md  pr-24.md  pr-25.md  pr-26.md  pr-28.md  pr-29.md  pr-30.md  pr-32.md  pr-6.md  pr-7.md  pr-79.md  pr-8.md  pr-80.md  pr-81.md  pr-82.md  pr-83.md  pr-86.md  pr-87.md  pr-91.md  (+5 more)
examples/: build123d_integration.py  pbr_integration.py
mat-rs/: CHANGELOG.md  Cargo.toml
mat-rs/data/: README.md  ceramics.toml  electronics.toml  gases.toml  liquids.toml  metals.toml  plastics.toml  scintillators.toml
mat-rs/src/: db.rs  elements.rs  formula.rs  lib.rs
mat-rs/tests/: integration.rs
scripts/: check_pep_naming.py  enrich_from_wikidata.py  enrich_vis.py  generate_catalog.py  generate_previews.py  generate_readme.py  migrate_toml_finishes.py  requirements-curation.txt
src/pymat/: __init__.py  core.py  elements.py  enrichers.py  factories.py  loader.py  properties.py  registry.py  search.py  units.py
src/pymat/data/: ceramics.toml  electronics.toml  gases.toml  liquids.toml  metals.toml  plastics.toml  scintillators.toml
src/pymat/pbr/: __init__.py  _protocol.py
src/pymat/vis/: __init__.py  _client.py  _model.py  _vendor_adapters.py  _vendor_client.py  adapters.py
tests/: __init__.py  _visual_compare.py  conftest.py  material_preview.html  test_adapters.py  test_apply_to.py  test_build123d_integration_examples.py  test_catalog.py  test_chainable_rename.py  test_check_pep_naming.py  test_consumer_journey.py  test_core.py  test_e2e_vis.py  test_enrichers.py  test_error_messages.py  test_integration.py  test_loader.py  test_lookup.py  test_mat_vis_311_313_repros.py  test_pbr.py  test_properties.py  test_readme_examples.py  test_substrate_repros.py  test_toml_integrity.py  test_uncertainties.py  test_vis.py  test_vis_bernhard_repros.py  test_vis_inheritance.py  test_visual_compare.py  test_visual_regression.py  visual_grid_render.html  visual_render.html
tests/baselines/: README.md
tests/visual_output/: metal_textured_threejs.json  steel_threejs.json
