[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-materials"
version = "3.4.0"
description = "Hierarchical material library for CAD applications with build123d integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lars Gerchow" }
]
keywords = ["materials", "cad", "build123d", "engineering", "properties"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pint>=0.20",
    "periodictable>=1.6.0",
    "uncertainties>=3.2",
    "mat-vis-client>=0.5.0",
    "tomli>=1.0.0; python_version == '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build123d>=0.7.0; python_version<'3.13'",
]

[project.urls]
Homepage = "https://github.com/MorePet/py-mat"
Repository = "https://github.com/MorePet/py-mat"
Issues = "https://github.com/MorePet/py-mat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pymat"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pymat/**",
    "tests/**",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    "ignore:Material\\(pbr=:DeprecationWarning",
    "ignore:TOML \\[pbr\\] section:DeprecationWarning",
    "ignore:AffineScalarFunc:FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
