[package]
name = "rs-materials"
version = "0.2.0"
edition = "2024"
description = "Material database and formula parsing for Monte Carlo particle transport"
license = "MIT"
repository = "https://github.com/MorePET/mat"
homepage = "https://github.com/MorePET/mat"
keywords = ["materials", "physics", "monte-carlo", "scintillator"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
regex = "1"

[dev-dependencies]
approx = "0.5"
